2008-09-28 [colin]	0.20.0cvs16

	* src/claws.def
		Fix def file

2008-09-28 [colin]	0.20.0cvs15

	* src/date.c
		Don't use strptime on windows

2008-09-28 [colin]	0.20.0cvs14

	* src/date.c
		Define _XOPEN_SOURCE prior to inclusion
		of pthread.h (fixes warning)

2008-09-28 [colin]	0.20.0cvs13

	* src/claws.def
	* src/date.c
	* src/feed.c
	* src/rssyl_cb_gtk.c
	* src/rssyl_cb_menu.c
		Win32 fixes - still misses a reimplementation
		of strptime using sscanf or equivalent

2008-09-28 [colin]	0.20.0cvs12

	* src/date.c
		Fix warning

2008-09-27 [colin]	0.20.0cvs11

	* configure.ac
	* src/Makefile.am
	* src/claws.def
	* src/date.c
	* src/feed.c
	* src/plugin.def
	* src/version.rc
		Prepare windows port

2008-08-17 [colin]	0.20.0cvs10

	* src/feed.c
		Warning fix

2008-08-14 [colin]	0.20.0cvs9

	* src/opml.c
		Fix bug 1694, 'OPML import segfault in 
		folder_create_folder()' Use 'text' instead
		of 'title' if title doesn't exist.

2008-08-14 [colin]	0.20.0cvs8

	* src/opml.c
		Fix bug 1694, 'OPML import segfault in 
		folder_create_folder()' Use 'text' instead
		of 'title' if title doesn't exist.

2008-08-07 [colin]	0.20.0cvs7

	* src/rssyl_gtk.c
		Undeprecate

2008-08-05 [colin]	0.20.0cvs6

	* src/plugin.c
	* src/rssyl_cb_menu.c
		Undeprecate GtkCTree

2008-07-30 [colin]	0.20.0cvs5

	* src/plugin.c
	* src/rssyl_cb_menu.c
	* src/rssyl_cb_menu.h
	* src/rssyl_gtk.c
		Move the folderview popup menu to GtkUIManager

2008-07-29 [colin]	0.20.0cvs4

	* src/rssyl_gtk.c
		Switch the main menu to GtkUIManager

2008-07-21 [colin]	0.20.0cvs3

	* src/rssyl_prefs.c
		Fix include

2008-07-20 [colin]	0.20.0cvs2

	* src/rssyl_prefs.c
		Undeprecate stuff

2008-07-08 [colin]	0.20.0cvs1

	* src/feed.c
		Fix bug 1665, "RSSyl does not handle well feeds 
		that have no title".
		Fixes in turn bug 1666, "Can not rename a feed 
		that has no title"

2008-06-27 [paul]	0.20

	0.20 released

2008-06-18 [ticho]	0.19.0cvs3

	* src/feed.c
		Fix some memory leaks.

2008-05-26 [paul]	0.19.0cvs2
