@@ -10,7 +10,7 @@ dnl plugin version
 MAJOR_VERSION=0
 MINOR_VERSION=20
 MICRO_VERSION=0
-EXTRA_VERSION=16
+EXTRA_VERSION=17
 
 CFLAGS="$CFLAGS -Wall"
 if test $USE_MAINTAINER_MODE = yes; then
