@@ -1,3 +1,9 @@
+2008-09-28 [colin]	0.20.0cvs17
+
+	* src/claws.def
+	* src/feed.c
+		Don't use mkstemp on Win32
+
 2008-09-28 [colin]	0.20.0cvs16
 
 	* src/claws.def
